fix: uneeded y-overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
     height: 85vh;
 }
 
+.body-height-75 {
+    height: 75vh;
+}
+
 /* Font Styling */
 .bbc-font {
     font-family: 'Merriweather', serif;
